# redbackbots-coderelease

./: .gitattributes  .gitignore  LICENSE  README.md
Config/: defaults.cfg  settings.cfg  software.json  teams.cfg
Config/Robots/: robotsv2.cfg
Config/Robots/Default/: body.cfg  head.cfg  network.cfg  robot.cfg
Config/Robots/Nao/Nao/: network.cfg
Config/Scenarios/Default/: logger.cfg
Config/Templates/: network.cfg  robot.cfg
Docs/: Home.md
Docs/behaviours/body/roles/: Goalie.md
Docs/behaviours/body/skills/: GoalieAngle.md
Docs/developer_environment/: Getting_Started.md  Working_with_WSL.md
Docs/hardware/: Nao_Button_Interface.md  flashing-a-nao-new.md
Docs/running_a_game/: Configuration.md  running-software.md
Install/: createHomeArchive  createOPN  createRobot  createRootImage  flashNAO
Install/Files/: alsa-kludge.service  default.yaml.base  default.yaml.wifi  default_dhcp_example.yaml  default_static_example.yaml  harakiri  install.sh  libonnxruntime.so.1.10.0  lola.service  rbb.service  sudoers_rbb
Install/Include/: rbbBase
Install/MLModels/: naive_bayes.pkl  naive_bayes_11.sav  naive_bayes_11_ver2.sav  naive_bayes_5.sav  nb5.sav  nb_5_ver3.sav  xgboost.pkl
Install/MLModels/whistle/: NaoDevilsWhistleNet.h5  naodevilsnet.py
Install/NaoHome/: README.md  robocup.conf
Install/NaoHome/.ssh/: authorized_keys
Install/NaoHome/config/: MultiModalCMKFParams_back.cfg  redbackbots.cfg
Install/NaoHome/data/: README.md
Install/NaoHome/data/pos/: cornerKickBlue.pos  cornerKickRed.pos  defenderCentre.pos  fulltime.pos  goalBlue.pos  goalKickBlue.pos  goalKickRed.pos  goalRed.pos  kickInBlue.pos  kickInRed.pos  pushingFreeBlue.pos  pushingFreeRed.pos  sit.pos  sitUnstiff.pos  testArms.pos
Install/NaoHome/whistle/: alert_pulseaudio.py  playwav.py  whistle_detector.py
Install/NaoHome/whistle/wav/: file_rename.py
Install/Profiles/: RBB
Make/CMake/: BoostTest.cmake  LolaTest.cmake  Nao.cmake  NaoToolchain.cmake  Offnao.cmake  Vatnao.cmake  rbb-common.cmake  snappy.cmake
Make/Common/: CMakeLists.txt  buildSetup  createHomeArchive  createRobot  deploy  manage_hosts  nao_sync  offnao  team_config  team_sync  vatnao
Make/Common/rbbpython/: aptinstall.py  config.py  echo.py  grep.py  install.py  shellEscape.py  sshscp.py
Make/Linux/: buildSetup  compile  generate
Src/behaviours/: behaviour.py
Src/behaviours/audio/: pose_audio.py  whistle_controller.py  whistle_detector.py
Src/behaviours/body/roles/: Attacker.py  Default.py  Defender.py  Goalie.py  Midfielder.py  PositionSelector.py  RoleSelector.py  Superstar.py  Upfielder.py
Src/behaviours/body/skills/: CornerKick.py  DefenceAngle.py  DiveHeavyGoalieAngle.py  DiveLightGoalieAngle.py  Dribble.py  FastestStraightWalk.py  FindBall.py  Finished.py  Game.py  GoalieCornerKickIn.py  GoalieDive.py  Initial.py  InterceptBall.py  Kick.py  KickOffDefence.py  Kickoff.py  Lineup.py  LineupKick.py  LineupPass.py  Localise.py  ObstaclesWalk.py  Penalised.py  PenaltyDefender.py  PenaltyKicker.py  Playing.py  Ready.py  RoleSelector.py  Set.py  Sit.py  Stand.py  Standby.py  Striker.py  TeamFindBall.py  Turn.py  TurnDefendPose.py  TurnToBall.py  Walk.py  WalkBetween.py  WalkSideways.py  WalkToCorner.py  (+2 more)
Src/behaviours/body/test/: Demo.py  GoToBall.py  LineupKickTest.py  LineupKickTestSuite.py  LocalisationTest.py  README.md  RepeatLineupKickTest.py  TestButton.py  TestNumpy.py  VisionReferee.py  VisionReferree.py  WalkAlongCentre.py  WalkAround.py  avoidance_testing.py  sonar_testing.py  whistle_hearing.py
Src/behaviours/head/: HeadAware.py  HeadCentre.py  HeadCentreDown.py  HeadTrackBall.py
Src/behaviours/positioning/: PositioningAgainstDribbleTeam.py  PositioningAgainstKickingTeam.py
Src/behaviours/util/: BallMovement.py  Constants.py  EventComms.py  FieldGeometry.py  GameStatus.py  Global.py  LedOverride.py  Log.py  MathUtil.py  ObstacleAvoidance.py  RemoteStiffener.py  RolePriority.py  Sonar.py  TeamStatus.py  Timer.py  Vector2D.py  actioncommand.py  led_override.py  say.py
Src/behaviours/vision/: images_pred.py  rnn_vision_referee.py  visual_ref.py
Src/behaviours/vision/haarcascades/: instruction.txt
Src/behaviours/vision/models/: lstm_30x30_20.onnx  rnn_128x64_20.onnx
Src/boost_test/: README.md  boosttest.cpp  my_module.cpp  my_module.hpp  py_boosttest.py
Src/lola_test/: CMakeLists.txt  LICENSE  README.md  imu.h  joints.h  lola_connector.cpp
Src/offnao/include/: frame.hpp  mediaPanel.hpp  naoData.hpp  visualiser.hpp
Src/offnao/include/readers/: dumpReader.hpp  networkReader.hpp  reader.hpp
Src/offnao/include/renderers/: CameraImageRender.hpp  OverlayPainter.hpp
Src/offnao/include/tabs/: cameraTab.hpp  overviewTab.hpp  tab.hpp  variableView.hpp  visionTab.hpp
Src/offnao/include/utils/: FieldPainter.hpp
Src/offnao/src/: ConnectionBar.ui  main.cpp  serialise.cpp  visualiser.cpp  visualiser.tcc
Src/offnao/src/readers/: bbd2Reader.cpp  dumpReader.cpp  networkReader.cpp  reader.cpp  record2Reader.cpp
Src/offnao/src/renderers/: CameraImageRender.cpp  OverlayPainter.cpp
Src/offnao/src/tabs/: PointCloud.cpp  cameraTab.cpp  fieldView.cpp  overviewTab.cpp  tab.cpp  variableView.cpp  visionTab.cpp  yuvHistogram.cpp
Src/offnao/src/utils/: CPlaneColours.cpp  FieldPainter.cpp  (+2 more)
Src/robot/include/: redbackbots.hpp  soccer.hpp
Src/robot/src/: main.cpp  soccer.cpp
Util/Buildchain/: .gitignore  README.md
Util/Buildchain/CompiledNN/: CMakeLists.txt  README.md
Util/Buildchain/PortAudio/: VERSION
Util/Buildchain/boost/: VERSION
Util/Buildchain/fftw3/: FFTW3Config.cmake  FFTW3ConfigVersion.cmake  README.md
Util/Buildchain/kissfft/: VERSION
Util/Buildchain/opencv/: CMakeCache.txt  CMakeDownloadLog.txt  CMakeVars.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  OpenCVConfig.cmake  OpenCVModules.cmake  cmake_install.cmake  cmake_uninstall.cmake  cvconfig.h  opencv_apps_python_tests.cfg  opencv_data_config.hpp  opencv_python_config.cmake  version_string.tmp
Util/Buildchain/python2.7/: VERSION
Util/Buildchain/snappy/: CMakeLists.txt  VERSION
(+500 files in other folders)
